<resources>
    <string name="app_name">QuizUpProject</string>
    <string name="quizup">QuizUp!</string>
    <string name="inicio_de_sesi_n">Inicio de sesión</string>
    <string name="correo">Correo</string>
    <string name="contrase_a">Contraseña</string>
    <string name="introduce_tu_correo">Introduce tu correo</string>
    <string name="introduce_tu_contrase_a">Introduce tu contraseña</string>
    <string name="no_tienes_cuenta">¿No tienes cuenta?</string>
    <string name="boton_registro">Regístrate</string>
    <string name="registro">Registro</string>
    <string name="crear_sala">Crear Sala</string>
    <string name="nombre_de_la_sala">Nombre de la sala</string>
    <string name="introduce_el_nombre_de_tu_sala">Introduce el nombre de tu sala</string>
    <string name="introduce_contrase_a_para_la_sala">Introduce contraseña para la sala</string>
    <string name="unirse_a_una_sala">Unirse a una sala</string>
    <string name="esperando_a_que_inicie_el_juego">Esperando a que inicie el juego...</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="introduce_tu_nombre_de_usuario">Introduce tu nombre de usuario</string>
    <string name="bienvenido_al_juego">¡Bienvenido al juego!</string>
    <string name="tu_casilla_actual">Tu casilla actual:</string>
    <string name="casilla_actual">Casilla actual</string>
    <string name="casilla_anterior">Casilla anterior:</string>
    <string name="img_casilla_anterior">Casilla anterior</string>
    <string name="casilla_posterior">Casilla posterior:</string>
    <string name="img_casilla_posterior">Casilla posterior</string>
    <string name="jugador1">Jugador1</string>
    <string name="jugador2">Jugador2</string>
    <string name="jugador3">Jugador3</string>
    <string name="jugador4">Jugador4</string>
    <string name="jugadores_en_la_sala">Jugadores en la sala:</string>
    <string name="pregunta_x">Pregunta x</string>
    <string name="respuesta_a">Respuesta a</string>
    <string name="respuesta_b">Respuesta b</string>
    <string name="respuesta_c">Respuesta c</string>
    <string name="respuesta_d">Respuesta d</string>
    <string name="categor_a_dif_cil">Categoría Difícil</string>
    <string name="categor_a_de_arte">Categoría de arte</string>
    <string name="categor_a_cine">Categoría Cine</string>
    <string name="categor_a_geograf_a">Categoría Geografía</string>
    <string name="categor_a_m_sica">Categoría Música</string>
    <string name="categor_a_historia">Categoría Historia</string>
    <string name="imagen_historia">Imagen historia</string>
    <string name="logo">Logo</string>
    <string name="imagen_demonio">Imagen Demonio</string>
    <string name="categor_a_f_cil">Categoría Fácil</string>
    <string name="foto_angel">Foto angel</string>
    <string name="felicidades_has_ganado">¡Felicidades, has ganado!</string>
    <string name="c_digo_de_sala">Código de sala</string>
    <string name="introduce_el_c_digo_de_la_sala">Introduce el código de la sala</string>
    <string name="codigo_de_la_sala">Codigo de la sala</string>
    <string name="introduce_el_codigo_de_la_sala">Introduce el codigo de la sala</string>
</resources>